<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/parent"
    tools:context=".PhoneVerificationActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/otp"
        android:textSize="18sp"
        android:fontFamily="@font/sf"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:id="@+id/prompt_text"
        android:fontFamily="@font/sf"
        android:text="@string/please_enter_code"
        android:layout_marginTop="10dp"
        android:layout_margin="10dp"
        />

    <com.chaos.view.PinView
        android:id="@+id/pinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/PinWidget.PinView"
        app:cursorWidth="2dp"
        app:hideLineWhenFilled="true"
        app:itemCount="6"
        app:itemHeight="48dp"
        app:itemRadius="4dp"
        app:itemSpacing="2dp"
        app:itemWidth="48dp"
        app:lineColor="@color/colorPrimary"
        app:lineWidth="1dp"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        app:viewType="rectangle"
        />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/sf"
        android:text="Sign In"
        android:textColor="@color/white"
        tools:ignore="HardcodedText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/resend_otp"
        android:id="@+id/resend_otpTV"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="13sp"
        android:fontFamily="@font/sf"
        />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_marginTop="40dp"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:visibility="gone"
        />

</LinearLayout>