<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:id="@+id/map_card_view"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="10dp"
    app:cardMaxElevation="12dp"
    android:layout_marginTop="50dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    android:visibility="gone"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:src="@drawable/ball_green"
                    />

                <!-- Straight line -->
                <View
                    android:layout_width="2dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="5dp"
                    android:background="@color/grey"/>

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/placeholder"

                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf"
                    android:text="@string/pickup_location"
                    android:textSize="16sp"
                    android:textColor="@color/black" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/relative_pick"
                    >

                    <TextView
                        android:id="@+id/pick_up_locationTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf"
                        android:text="@string/enter_pickup_location" />

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:src="@drawable/add_grey_ic"
                        android:layout_alignParentRight="true"
                        android:id="@+id/plus_origin_imageview"
                        android:layout_marginEnd="15dp"
                        />

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf"
                    android:text="@string/drop_location"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/relative_drop"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf"
                        android:id="@+id/drop_off_locationTV"
                        android:text="@string/enter_destination_location" />
                    <ImageView
                        android:id="@+id/plus_destination_imageview"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:src="@drawable/add_grey_ic"
                        android:layout_alignParentRight="true"
                        android:layout_marginEnd="15dp"
                        />

                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

