<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet_initial"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/white"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf"
        android:text="@string/trip_request_summary"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="15dp"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:orientation="horizontal"
   >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:src="@drawable/ball_green"
            />

        <!-- Straight line -->
        <View
            android:layout_width="2dp"
            android:layout_height="90dp"
            android:layout_marginStart="5dp"
            android:background="@color/grey"/>

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/placeholder"

            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf"
            android:text="@string/pickup_location"
            android:textSize="16sp"
            android:id="@+id/pickup_initial_tv"
            android:textColor="@color/black" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf"
            android:text="Requested By:Kelvin Kagia "
            android:id="@+id/requested_by_initial_tv"
            android:textSize="16sp"
            android:layout_marginTop="10dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf"
            android:text="16kms(3 Mins)"
            android:textSize="16sp"
            android:id="@+id/distance_initial_tv"
            android:layout_marginTop="15dp" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf"
            android:text="@string/drop_location"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:id="@+id/drop_initial_tv"
            android:textColor="@color/black" />

    </LinearLayout>

</LinearLayout>
    <com.appz.abhi.simplebutton.SimpleButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/confirm_trip_initialB"
        android:padding="16dp"
        android:text="Confirm Trip"
        android:fontFamily="@font/sf"
        android:layout_marginTop="20dp"
        app:button_background_color="@color/colorPrimary"
        app:button_pressed_color="@color/colorPrimary"
        app:button_shape="fillet"
        app:button_text_color="@color/white"
        app:button_type="solid"
        tools:ignore="HardcodedText" />

    <com.appz.abhi.simplebutton.SimpleButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/cancel_trip_initialB"
        android:padding="16dp"
        android:text="Cancel"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/sf"
        app:button_background_color="@color/red"
        app:button_pressed_color="@color/red"
        app:button_shape="fillet"
        app:button_text_color="@color/red"
        app:button_type="outline"
        tools:ignore="HardcodedText" />
</LinearLayout>